--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,15 @@
                 <div class="header__nav-link"><a href="#">Reviews</a></div>
                 <div class="header__nav-link"><a href="#">Contact</a></div>
             </nav>
+            <h1 class="header__title">Travel Time</h1>
+            <div class="header__title-text">let's travel with us we will start a new adventure together with full of happiness and laughs</div>
+            <button class="header__btn">Join</button>
         </div>
     </header>
+    <div class="Arton">
+        <div class="icon"><img src="./assets/images/arton.png" alt=""></div>
+
+    </div>
 </body>
 
 </html>
