finished gallery block(minor add animations)

--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,47 @@
                 <div class="header__nav-link"><a href="#">Contact</a></div>
             </nav>
             <h1 class="header__title">Travel Time</h1>
-            <div class="header__title-text">let's travel with us we will start a new adventure together with full of happiness and laughs</div>
+            <div class="header__title-text">
+                <p>let's travel with us we will start a new adventure together with full of happiness and laughs</p>
+            </div>
             <button class="header__btn">Join</button>
         </div>
     </header>
     <div class="Arton">
         <div class="icon"><img src="./assets/images/arton.png" alt=""></div>
-
     </div>
+    <section class="gallery">
+        <div class="container">
+            <h2 class="gallery__title">Where do you want to go</h2>
+            <div class="gallery__items">
+                <div class="gallery__card">
+                    <div class="gallery__card-img"><img src="./assets/images/gallery-1.png" alt=""></div>
+                    <div class="gallery__card-title">Mountain</div>
+                    <div class="gallery__card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora .</div>
+                    <div class="gallery__card-btn">Read More</div>
+                </div>
+                <div class="gallery__card">
+                    <div class="gallery__card-img"><img src="./assets/images/gallery-2.png" alt=""></div>
+                    <div class="gallery__card-title">Mountain</div>
+                    <div class="gallery__card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora .</div>
+                    <div class="gallery__card-btn">Read More</div>
+                </div>
+                <div class="gallery__card">
+                    <div class="gallery__card-img"><img src="./assets/images/gallery-3.png" alt=""></div>
+                    <div class="gallery__card-title">Mountain</div>
+                    <div class="gallery__card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora .</div>
+                    <div class="gallery__card-btn">Read More</div>
+                </div>
+                <div class="gallery__card">
+                    <div class="gallery__card-img"><img src="./assets/images/gallery-4.png" alt=""></div>
+                    <div class="gallery__card-title">Mountain</div>
+                    <div class="gallery__card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora .</div>
+                    <div class="gallery__card-btn">Read More</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
