add jquery+owl.carousel. finished gallery block

--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,13 @@
             <button class="header__btn">Join</button>
         </div>
     </header>
-    <div class="Arton">
-        <div class="icon"><img src="./assets/images/arton.png" alt=""></div>
+    <div class="arton">
+        <div class="arton__icon"><img src="./assets/images/arton.png" alt=""></div>
     </div>
     <section class="gallery">
         <div class="container">
             <h2 class="gallery__title">Where do you want to go</h2>
-            <div class="gallery__items">
+            <div class="gallery__items owl-carousel owl-theme">
                 <div class="gallery__card">
                     <div class="gallery__card-img"><img src="./assets/images/gallery-1.png" alt=""></div>
                     <div class="gallery__card-title">Mountain</div>
