--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,23 @@
             </div>
         </div>
     </section>
-
+    <div class="arton">
+        <div class="arton__icon"><img src="./assets/images/arton.png" alt=""></div>
+    </div>
+    <section class="about">
+        <div class="container">
+            <h2 class="about__title">About us</h2>
+            <div class="about__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum
+                lobortis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus
+                urna at turpis condimentum lobortis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                himenaeos. Curabitur tempus urna at turpis condimentum lobortis.
+            </div>
+        </div>
+    </section>
+    <div class="arton">
+        <div class="arton__icon"><img src="./assets/images/arton.png" alt=""></div>
+    </div>
 </body>
 
 </html>
