--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,17 @@
     <div class="arton">
         <div class="arton__icon"><img src="./assets/images/arton.png" alt=""></div>
     </div>
+    <section class="mobile mobile-disactive">
+        <nav class="mobile__nav">
+            <div class="mobile__nav-link"><a href="#">Home</a></div>
+            <div class="mobile__nav-link"><a href="#">About Us</a></div>
+            <div class="mobile__nav-link"><a href="#">Tours</a></div>
+            <div class="mobile__nav-link"><a href="#">Gallery</a></div>
+            <div class="mobile__nav-link"><a href="#">Reviews</a></div>
+            <div class="mobile__nav-link"><a href="#">Contact</a></div>
+        </nav>
+
+    </section>
 </body>
 
 </html>
