done mobile menu

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,11 @@
                 <div class="header__nav-link"><a href="#">Reviews</a></div>
                 <div class="header__nav-link"><a href="#">Contact</a></div>
             </nav>
+            <div class="mobile__menu-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <h1 class="header__title">Travel Time</h1>
             <div class="header__title-text">
                 <p>let's travel with us we will start a new adventure together with full of happiness and laughs</p>
@@ -80,7 +85,7 @@
     <div class="arton">
         <div class="arton__icon"><img src="./assets/images/arton.png" alt=""></div>
     </div>
-    <section class="mobile mobile-disactive">
+    <section class="mobile">
         <nav class="mobile__nav">
             <div class="mobile__nav-link"><a href="#">Home</a></div>
             <div class="mobile__nav-link"><a href="#">About Us</a></div>
@@ -89,7 +94,6 @@
             <div class="mobile__nav-link"><a href="#">Reviews</a></div>
             <div class="mobile__nav-link"><a href="#">Contact</a></div>
         </nav>
-
     </section>
 </body>
 
