fix burger, mobile adaptive M/L

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,6 @@
             </nav>
             <div class="mobile__menu-btn">
                 <span></span>
-                <span></span>
-                <span></span>
             </div>
             <h1 class="header__title">Travel Time</h1>
             <div class="header__title-text">
@@ -64,6 +62,32 @@
                     <div class="gallery__card-title">Mountain</div>
                     <div class="gallery__card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora .</div>
                     <div class="gallery__card-btn">Read More</div>
+                </div>
+            </div>
+            <div class="gallery__mobile">
+                <div class="gallery__mobile-card">
+                    <div class="gallery__mobile-card-img"><img src="./assets/images/gallery-1.png" alt=""></div>
+                    <div class="gallery__mobile-card-title">Mountain</div>
+                    <div class="gallery__mobile-card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora .</div>
+                    <div class="gallery__mobile-card-btn">Read More</div>
+                </div>
+                <div class="gallery__mobile-card">
+                    <div class="gallery__mobile-card-img"><img src="./assets/images/gallery-2.png" alt=""></div>
+                    <div class="gallery__mobile-card-title">Mountain</div>
+                    <div class="gallery__mobile-card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora .</div>
+                    <div class="gallery__mobile-card-btn">Read More</div>
+                </div>
+                <div class="gallery__mobile-card">
+                    <div class="gallery__mobile-card-img"><img src="./assets/images/gallery-3.png" alt=""></div>
+                    <div class="gallery__mobile-card-title">Mountain</div>
+                    <div class="gallery__mobile-card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora .</div>
+                    <div class="gallery__mobile-card-btn">Read More</div>
+                </div>
+                <div class="gallery__mobile-card">
+                    <div class="gallery__mobile-card-img"><img src="./assets/images/gallery-4.png" alt=""></div>
+                    <div class="gallery__mobile-card-title">Mountain</div>
+                    <div class="gallery__mobile-card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora .</div>
+                    <div class="gallery__mobile-card-btn">Read More</div>
                 </div>
             </div>
         </div>
